--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/terminus": "^9.2.2",
+    "@types/js-yaml": "^4.0.5",
+    "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
