--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/cqrs": "^9.0.4",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/terminus": "^9.2.2",
     "@types/js-yaml": "^4.0.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
+    "mongoose": "^7.1.2",
+    "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typescript-result": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -37,6 +44,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
