--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@coherentglobal/spark-execute-sdk": "^0.4.19",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
@@ -46,6 +47,7 @@
     "@types/jest": "29.5.1",
     "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
+    "@types/papaparse": "^5.3.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
