--- a/.github/workflow/config.yml
+++ b/.github/workflow/config.yml
@@ -1,9 +1,9 @@
 name: build
 
 on:
-  # push:
-  #   branches: [main]
-  #   paths-ignore: ['**.md']
+  push:
+    branches: [main]
+    paths-ignore: ['**.md']
   pull_request:
     branches: [main]
     paths-ignore: ['**.md']
