--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # compiled output
 /dist
 /node_modules
+yarn.lock
+package-lock.json
 
 # Logs
 logs
@@ -41,6 +43,6 @@ lerna-debug.log*
 *.env
 !.env.example
 
-# misc
+# Misc
 /uploads
 /temp
