--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@nestjs/cqrs": "^9.0.4",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^10.0.5",
     "@nestjs/swagger": "^7.0.4",
     "@nestjs/terminus": "^9.2.2",
+    "@nestjs/websockets": "^10.0.5",
     "@types/js-yaml": "^4.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -49,6 +51,7 @@
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.7.1",
     "typescript-result": "^1.2.0",
     "uuid": "^9.0.0"
   },
