--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "wasm",
     "webassembly"
   ],
-  "license": "UNLICENSED",
+  "license": "MIT",
   "engines": {
     "node": ">= 16.0.0"
   },
@@ -49,7 +49,8 @@
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typescript-result": "^1.2.0"
+    "typescript-result": "^1.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -61,6 +62,7 @@
     "@types/node": "18.16.12",
     "@types/papaparse": "^5.3.7",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
