--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/swagger": "^7.0.4",
     "@nestjs/terminus": "^9.2.2",
     "@types/js-yaml": "^4.0.5",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
