--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nestjs/websockets": "^9.4.0",
     "@types/js-yaml": "^4.0.5",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
