--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,7 +24,9 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm run test:e2e
+        run: |
+          npm run test
+          npm run test:e2e
 
       - name: Build project
         run: npm run build
