--- a/package.json
+++ b/package.json
@@ -98,6 +98,12 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/app/$1",
+      "@domain/(.*)": "<rootDir>/domain/$1",
+      "@infra/(.*)": "<rootDir>/infra/$1",
+      "@shared/(.*)": "<rootDir>/shared/$1"
+    },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
