--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,15 @@
-node_modules
-npm-debug.log
 .git
 .github
-README.md
-CHANGELOG.md
 .gitignore
+.husky
 .nvmrc
 .prettierrc
-uploads
-examples
+coverage
+dist
 docs
+examples
+node_modules
+uploads
+README.md
+CHANGELOG.md
+npm-debug.log
