--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wasm-service",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "API service for running WASM files",
-  "author": "Coherent Global Inc <fieldengineering@coherent.global>",
+  "author": "Coherent <fieldengineering@coherent.global>",
   "private": true,
   "keywords": [
     "api",
@@ -18,59 +18,67 @@
   },
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"{src,test}/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts": "eslint \"{src,test}/**/*.ts\" --cache --fix",
+    "*.{md,ts,json,yml}": "prettier --write"
   },
   "dependencies": {
-    "@coherentglobal/wasm-runner": "^0.0.102",
+    "@coherentglobal/wasm-runner": "^0.0.103",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/cqrs": "^9.0.4",
-    "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/cqrs": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/swagger": "^7.0.4",
     "@nestjs/terminus": "^9.2.2",
-    "@types/js-yaml": "^4.0.5",
+    "@nestjs/websockets": "^9.4.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
-    "mongoose": "^7.1.2",
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.7.1",
     "typescript-result": "^1.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.4.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/papaparse": "^5.3.7",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "29.5.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -90,6 +98,12 @@
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/app/$1",
+      "@domain/(.*)": "<rootDir>/domain/$1",
+      "@infra/(.*)": "<rootDir>/infra/$1",
+      "@shared/(.*)": "<rootDir>/shared/$1"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
