refactor: standardize api results
Switch to 'executed_at' and 'duration' instead.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,22 @@
 .git
 .github
-.gitignore
 .husky
+.vscode
+.dockerignore
+.eslintcache
+.gitignore
 .nvmrc
 .prettierrc
 coverage
 dist
 docs
-.husky
 examples
 node_modules
+temp
 uploads
-README.md
 CHANGELOG.md
+Dockerfile*
+LICENSE
+README.md
 npm-debug.log
+yarn.lock
