--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm-service",
-  "version": "0.1.2+2",
+  "version": "0.1.3",
   "description": "API service for running WASM files",
   "author": "Coherent <team@coherent.global>",
   "private": true,
