--- a/.config/config.yml
+++ b/.config/config.yml
@@ -1,4 +1,14 @@
+service:
+  connectivity:
+    enabled: true
+    baseUrl: https://excel.uat.us.coherent.global/my-tenant
+    token:
+      header: Authorization
+      value: Bearer some-access-token
+
 performance:
   spark:
     cacheSize: 4
     threads: 4
+  health:
+    appDir: .
