--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm-service",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "API service for running WASM files",
   "author": "Coherent <team@coherent.global>",
   "private": true,
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@coherentglobal/wasm-runner": "^0.1.19",
+    "@cspark/sdk": "^0.4.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
@@ -88,6 +89,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "form-data": "^4.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
