--- a/.config/config.yml
+++ b/.config/config.yml
@@ -7,6 +7,8 @@ service:
       value: Bearer some-access-token
 
 performance:
+  history:
+    enabled: false
   spark:
     cacheSize: 4
     threads: 4
