feat(config): support additional configurable fields
* chore: add connectivity configuration

* refactor: apply minor improvements

Use singleton for SaaS client instead by exposing it as part of SaasService.

* docs: update service config swagger

--- a/.config/config.yml
+++ b/.config/config.yml
@@ -1,4 +1,16 @@
+service:
+  connectivity:
+    enabled: true
+    baseUrl: https://excel.uat.us.coherent.global/my-tenant
+    token:
+      header: Authorization
+      value: Bearer some-access-token
+
 performance:
+  history:
+    enabled: false
   spark:
     cacheSize: 4
     threads: 4
+  health:
+    appDir: .
